[project]
name = "uc-intg-nadav"
version = "1.0.0"
description = "NAD AV integration for Unfolded Circle Remote"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ucapi-framework>=1.4.0",
    "nad-receiver==0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"